--- a/settings.ini
+++ b/settings.ini
@@ -27,7 +27,7 @@ title = %(lib_name)s
 
 ### PyPI ###
 audience = Developers
-author = Julia Butler
+author = juliabutler
 author_email = juliafulibutler@gmail.com
 copyright = 2022 onwards, %(author)s
 description = A MadLibs library using Hugging Face ML models
